Bug 363072 - Group layers auto expanding when opening or switching between documents
Summary: Group layers auto expanding when opening or switching between documents
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (show other bugs)
Version: 3.0 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-14 15:53 UTC by Azure
Modified: 2016-05-27 14:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Azure 2016-05-14 15:53:49 UTC
Whenever I have a document open, if I switch to another document and return to the original, all of the group layers are automatically expanded. The same thing happens if you collapse the layers, save the document, and then reopen it. They simply won't stay collapsed. I'm not sure if it's a glitch that it happens when opening a document (I assume so, as it didn't do that in 2.9), but I'm certain that it's not the intended behavior when switching between tabs. 

Reproducible: Always

Steps to Reproduce:
1. Open two separate documents with group layers
2. Collapse the group layers
3. Switch to the other document
4. Switch back to the original document and all the layers will be expanded

Or

1. Open a document with group layers
2. Collapse the group layers
3. Save and close the document
4. Reopen it and all the layers will be expanded

Actual Results:  
All group layers are expanded, regardless of whether they were previously collapsed

Expected Results:  
Left the expanded/collapsed states of the group layers unmodified

The specific 3.0 beta build I'm using is git d330a4a
Comment 1 Halla Rempt 2016-05-15 12:04:46 UTC
Hi,

Thanks for your report. I assumed it would be a Qt thing, but Dmitry is going to look into it, he says we can actually control the expanding, so I've added the issue to his todo: https://phabricator.kde.org/T2503
Comment 2 Dmitry Kazakov 2016-05-27 14:26:05 UTC
Git commit e38aa23f0f4b4d10d5e83b9a85fcec1e38ce789d by Dmitry Kazakov.
Committed on 27/05/2016 at 14:22.
Pushed by dkazakov into branch 'master'.

Fix expanding of the layers when switching document windows

Fixes T2503

M  +1    -5    plugins/dockers/defaultdockers/kis_layer_box.cpp

http://commits.kde.org/krita/e38aa23f0f4b4d10d5e83b9a85fcec1e38ce789d