Fix expanding of the layers when switching document windows

Fixes T2503
BUG:363072